# lego-mcp-fusion360

./: .env.example  .gitignore  .pre-commit-config.yaml  BRICK_BUILDING_GUIDE.md  CHANGELOG.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  TESTING.md  TESTING_GUIDE.md  V7_RELEASE_NOTES.md  V8_RELEASE_NOTES.md  VERIFICATION_REPORT.md  WORLD_CLASS_IMPLEMENTATION_PLAN.md  alembic.ini  claude_desktop_config.example.json  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  quick-start.sh  requirements-mcp.txt  requirements-vision.txt  requirements.txt  test_all_phases.py  test_equipment.py  test_erp.py  test_lego_specs.py  test_models.py  test_services.py  test_v5_api.sh  verify_implementation.py
.github/: dependabot.yml
benchmarks/: __init__.py  quality_benchmark.py  scheduling_benchmark.py  sustainability_benchmark.py
config/: hsm_production.yaml  realtime_kernel.yaml  vision_config.yaml
dashboard/: Dockerfile  app.py  config.py  requirements.txt  worker.py
docs/: API.md  API_V8.md  DEVELOPER.md  MCP_TOOLS.md  QUICKSTART.md  ROS2_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  VISION_SETUP.md  openapi.yaml
fusion360-addin/: INSTALL.md
mcp-server/: Dockerfile  requirements.txt  run_server.py
output/: README.md
ros2_ws/src/bambu_ros2/: CMakeLists.txt  package.xml
ros2_ws/src/bambu_ros2/bambu_ros2/: __init__.py  bambu_node.py
ros2_ws/src/formlabs_ros2/: CMakeLists.txt  package.xml
ros2_ws/src/formlabs_ros2/formlabs_ros2/: __init__.py  formlabs_node.py
ros2_ws/src/grbl_ros2/: CMakeLists.txt  package.xml
ros2_ws/src/grbl_ros2/grbl_ros2/: __init__.py  grbl_node.py  tinyg_node.py
ros2_ws/src/lego_mcp_agv/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_agv/launch/: agv_fleet.launch.py
ros2_ws/src/lego_mcp_agv/lego_mcp_agv/: __init__.py  agv_simulator.py  agv_simulator_node.py  alvik_driver.py  alvik_driver_node.py  fleet_manager.py  fleet_manager_node.py  task_allocator.py  task_allocator_node.py  waypoint_manager_node.py
ros2_ws/src/lego_mcp_agv/maps/: factory_floor.yaml
ros2_ws/src/lego_mcp_bft_consensus/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_bft_consensus/src/: bft_consensus_node.cpp
ros2_ws/src/lego_mcp_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_bringup/config/: cell_layout.yaml  equipment_params.yaml
ros2_ws/src/lego_mcp_bringup/launch/: deterministic_startup.launch.py  factory_cell.launch.py  factory_lifecycle.launch.py  full_system.launch.py  industry40.launch.py  lifecycle_manager.launch.py  robotics.launch.py  scada_bridges.launch.py  simulation.launch.py  v8_full_system.launch.py
ros2_ws/src/lego_mcp_calibration/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_calibration/lego_mcp_calibration/: __init__.py  hand_eye_calibration.py  robot_calibration.py  tcp_calibration.py
ros2_ws/src/lego_mcp_causal_engine/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_causal_engine/src/: causal_engine_node.cpp
ros2_ws/src/lego_mcp_chaos/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_chaos/config/: chaos_scenarios.yaml
ros2_ws/src/lego_mcp_chaos/launch/: chaos.launch.py
ros2_ws/src/lego_mcp_chaos/lego_mcp_chaos/: __init__.py  chaos_controller_node.py  chaos_scenarios.py  fault_injector.py  resilience_validator.py
ros2_ws/src/lego_mcp_chaos/test/: test_chaos.py
ros2_ws/src/lego_mcp_compliance/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_compliance/config/: compliance_params.yaml
ros2_ws/src/lego_mcp_compliance/src/: compliance_monitor.cpp
ros2_ws/src/lego_mcp_discovery/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_discovery/lego_mcp_discovery/: __init__.py  bandwidth_optimizer.py  bandwidth_optimizer_node.py  discovery_server.py  discovery_server_node.py  equipment_registry_node.py  topology_manager_node.py
ros2_ws/src/lego_mcp_formal_verification/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_formal_verification/lego_mcp_formal_verification/: __init__.py  property_spec.py  spec_generator.py  trace_analyzer.py
ros2_ws/src/lego_mcp_formal_verification/src/: model_checker_node.cpp  runtime_monitor_node.cpp
ros2_ws/src/lego_mcp_hsm/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_hsm/src/: hsm_node.cpp
ros2_ws/src/lego_mcp_microros/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_microros/firmware/alvik/: platformio.ini
ros2_ws/src/lego_mcp_microros/firmware/alvik/src/: main.cpp
ros2_ws/src/lego_mcp_microros/lego_mcp_microros/: __init__.py  microros_agent_launcher.py  microros_agent_launcher_node.py
ros2_ws/src/lego_mcp_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_moveit_config/config/: joint_limits.yaml  kinematics.yaml  lego_cell.srdf  moveit_controllers.yaml  ompl_planning.yaml
ros2_ws/src/lego_mcp_moveit_config/config/collision_objects/: workcell.yaml
ros2_ws/src/lego_mcp_moveit_config/launch/: move_group.launch.py
ros2_ws/src/lego_mcp_moveit_config/urdf/: lego_cell.urdf.xacro
ros2_ws/src/lego_mcp_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_msgs/action/: AGVNavigation.action  AssembleLego.action  ExecuteWorkOrder.action  MachineOperation.action  PerformInspection.action  PrintBrick.action  StopOperation.action  SupervisorRecovery.action
ros2_ws/src/lego_mcp_msgs/msg/: AGVMission.msg  AGVStatus.msg  AssemblyStep.msg  BrickSpec.msg  ChildStatus.msg  DefectDetection.msg  EquipmentDiscovery.msg  EquipmentStatus.msg  FailureEvent.msg  Heartbeat.msg  InspectionResult.msg  Measurement.msg  PrintJob.msg  QualityEvent.msg  SupervisorStatus.msg  TwinState.msg  TwinSync.msg
ros2_ws/src/lego_mcp_msgs/srv/: CreateWorkOrder.srv  DiscoverEquipment.srv  DispatchAGV.srv  GetSupervisorStatus.srv  GetTwinState.srv  LifecycleTransition.srv  RequestInspection.srv  RescheduleRemaining.srv  RestartNode.srv  ScheduleJob.srv
ros2_ws/src/lego_mcp_observability/: CMakeLists.txt  package.xml
ros2_ws/src/lego_mcp_observability/config/: observability_params.yaml
ros2_ws/src/lego_mcp_observability/src/: telemetry_collector.cpp
(+1042 files in other folders)
