[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lego-mcp-fusion360"
version = "7.0.0"
description = "LEGO brick manufacturing system with MCP server, Fusion 360 integration, and web dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Stephen Acuello"}
]
keywords = ["lego", "mcp", "fusion360", "cad", "3d-printing", "cnc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Computer Aided Design (CAD)",
]

dependencies = [
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
vision = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
all = [
    "lego-mcp-fusion360[vision,mcp,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/lego-mcp-fusion360"
Documentation = "https://github.com/yourusername/lego-mcp-fusion360/tree/main/docs"
Repository = "https://github.com/yourusername/lego-mcp-fusion360"
Issues = "https://github.com/yourusername/lego-mcp-fusion360/issues"

[project.scripts]
lego-mcp = "mcp-server.src.server:run"
lego-dashboard = "dashboard.app:app.run"
lego-slicer = "slicer-service.src.slicer_api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "dashboard*", "mcp-server*", "slicer-service*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | output
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
exclude = [".git", ".venv", "__pycache__", "output"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
