<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>formlabs_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 interface for Formlabs SLA printers via PreFormServer Local API</description>
  <maintainer email="admin@legomcp.local">LEGO MCP Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>lego_mcp_msgs</depend>

  <exec_depend>python3-aiohttp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
