<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_mcp_agv</name>
  <version>7.0.0</version>
  <description>
    LEGO MCP AGV (Automated Guided Vehicle) Package

    Provides fleet management and control for Alvik robots
    with ESP32 and micro-ROS for material transport in the
    LEGO manufacturing factory cell.

    Features:
    - Alvik driver node (micro-ROS interface)
    - Fleet manager for multiple AGVs
    - Task allocation and scheduling
    - Nav2 integration for autonomous navigation
    - Waypoint management
    - Material transport coordination
  </description>
  <maintainer email="lego-mcp@example.com">LEGO MCP Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>lego_mcp_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
