<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_mcp_bft_consensus</name>
  <version>1.0.0</version>
  <description>
    Byzantine Fault Tolerant Consensus for Distributed Manufacturing.
    
    Implements PBFT-based consensus for:
    - Multi-robot coordination
    - Distributed decision making
    - Fault-tolerant state machines
    - Safety-critical voting
    
    Reference: PBFT (Castro & Liskov), Raft, Paxos
  </description>
  
  <maintainer email="safety@lego-mcp.local">LEGO MCP Safety Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
