<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_mcp_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configurations for LEGO MCP factory cell</description>
  <maintainer email="admin@legomcp.local">LEGO MCP Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>lego_mcp_msgs</exec_depend>
  <exec_depend>lego_mcp_orchestrator</exec_depend>
  <exec_depend>lego_mcp_safety</exec_depend>
  <exec_depend>grbl_ros2</exec_depend>
  <exec_depend>formlabs_ros2</exec_depend>

  <!-- Robot packages -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- MoveIt2 -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <!-- rosbridge for Flask integration -->
  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
