<?xml version="1.0"?>
<package format="3">
  <name>lego_mcp_causal_engine</name>
  <version>1.0.0</version>
  <description>
    Causal Inference Engine for Manufacturing Root Cause Analysis.
    
    Implements causal discovery and inference for:
    - Defect root cause analysis
    - Process optimization
    - Counterfactual reasoning
    - Intervention planning
    
    Reference: Pearl's Causality, Do-Calculus
  </description>
  
  <maintainer email="analytics@lego-mcp.local">LEGO MCP Analytics Team</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
