<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_mcp_chaos</name>
  <version>7.0.0</version>
  <description>
    Chaos Testing Framework for LEGO MCP

    Implements chaos engineering for ROS2:
    - Fault injection (node crashes, network partitions)
    - Resilience validation
    - Recovery testing
    - Chaos scenarios for CI/CD

    Industry 4.0/5.0 Architecture - Reliability Testing
  </description>
  <maintainer email="noreply@legomcp.dev">LEGO MCP Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
