<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_mcp_compliance</name>
  <version>1.0.0</version>
  <description>
    DoD/Federal Compliance Monitoring for LEGO MCP Manufacturing.
    
    Implements:
    - NIST SP 800-171 audit logging
    - CMMC 2.0 practice monitoring  
    - CUI access tracking
    - Real-time security alerting
    - Tamper-evident audit chains
    
    Reference: NIST SP 800-171 Rev 2, CMMC 2.0, DFARS 252.204-7012
  </description>
  
  <maintainer email="compliance@lego-mcp.local">LEGO MCP Compliance Team</maintainer>
  <license>Proprietary - DoD Use Only</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
