<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_mcp_discovery</name>
  <version>7.0.0</version>
  <description>
    LEGO MCP Discovery Service Package

    Provides dynamic equipment discovery, registration, and
    topology management for the factory cell.

    Features:
    - Dynamic equipment registration and deregistration
    - Automatic node and topic discovery
    - Bandwidth optimization through selective subscriptions
    - Health monitoring and heartbeat management
    - Service discovery and load balancing
    - Network topology visualization
    - Equipment capability advertising
  </description>
  <maintainer email="lego-mcp@example.com">LEGO MCP Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rcl_interfaces</depend>
  <depend>lego_mcp_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
