<?xml version="1.0"?>
<package format="3">
  <name>lego_mcp_formal_verification</name>
  <version>1.0.0</version>
  <description>
    Formal Verification Framework for Manufacturing Systems.
    
    Implements formal methods for safety-critical manufacturing:
    - TLA+ specifications for distributed protocols
    - SPIN/Promela for safety property verification
    - Runtime monitoring with temporal logic
    - Model checking integration
    
    Reference: ISO 26262, DO-178C, IEC 61508
  </description>
  
  <maintainer email="verification@lego-mcp.local">LEGO MCP Verification Team</maintainer>
  <license>Proprietary</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
