<?xml version="1.0"?>
<package format="3">
  <name>lego_mcp_hsm</name>
  <version>1.0.0</version>
  <description>
    Hardware Security Module Integration for Manufacturing.
    
    Implements FIPS 140-2 Level 3 cryptographic operations:
    - Secure key storage and management
    - Digital signatures for audit trails
    - Encrypted communications
    - Certificate management
    
    Reference: FIPS 140-2, PKCS#11
  </description>
  
  <maintainer email="security@lego-mcp.local">LEGO MCP Security Team</maintainer>
  <license>Proprietary</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
