<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_mcp_microros</name>
  <version>7.0.0</version>
  <description>
    LEGO MCP micro-ROS Package

    Provides micro-ROS agent configuration and ESP32 firmware
    templates for Alvik AGVs.

    Features:
    - Micro-ROS agent launch and configuration
    - ESP32 firmware templates for Alvik
    - Serial/WiFi/UDP transport configuration
    - Message type definitions for embedded systems
    - Firmware build scripts and PlatformIO configuration
  </description>
  <maintainer email="lego-mcp@example.com">LEGO MCP Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>micro_ros_agent</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
