<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_mcp_observability</name>
  <version>2.0.0</version>
  <description>
    Real-time observability for LEGO MCP manufacturing system.

    Features:
    - OpenTelemetry-compatible distributed tracing
    - Prometheus-format metrics collection
    - Low-latency telemetry export
    - Manufacturing-specific metrics (OEE, quality, production)

    Reference: OpenTelemetry Specification, Prometheus Best Practices
  </description>
  <maintainer email="lego-mcp@example.com">LEGO MCP Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
